--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="author" content="owwwlab.com">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">            
-        <link rel="shortcut icon" href="http://vikasverma1077.github.io/img/brain.jpg">
+        <link rel="shortcut icon" href="http://vikasverma1077.github.io/img/vikas.jpg">
 
         <!--CSS styles-->
         <link rel="stylesheet" href="http://vikasverma1077.github.io/css/bootstrap.css">
@@ -110,7 +110,7 @@
                     <div class="col-md-8">
                         <p>I am a First year PhD student at Computer Science Department of  Aalto University, Finland.</p>
 			<p>My supervisor is <a href=https://users.ics.aalto.fi/praiko/>Tapani Raiko</a>.</p>                           
-                        <p>My research interest primarily lies in designing efficient optimization algorithms for Deep Architectures. To this end, I am working on the ideas based on transforming the outputs of hidden neurons of the networks. Example of this approach include <a href=http://jmlr.csail.mit.edu/proceedings/papers/v22/raiko12/raiko12.pdf>Deep learning made easier by linear transformations in perceptrons</a>, <a href=http://arxiv.org/abs/1502.03167>Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift</a>, <a href=https://papers.nips.cc/paper/5953-natural-neural-networks.pdf>Natural neural networks</a> </p>                           
+                        <p>My research interest primarily lies in designing efficient optimization algorithms for Deep Architectures. To this end, I am working on the ideas based on transforming the outputs of hidden neurons of the networks. Tranformation based approaches have been shown to be very effective Example of this approach include <a href=http://jmlr.csail.mit.edu/proceedings/papers/v22/raiko12/raiko12.pdf>Deep learning made easier by linear transformations in perceptrons</a>, <a href=http://arxiv.org/abs/1502.03167>Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift</a>, <a href=https://papers.nips.cc/paper/5953-natural-neural-networks.pdf>Natural neural networks</a> </p>                           
                     </div>
                     <div class="col-md-4">
                         <div class="subtitle text-center">
