--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
                                 <div class="date">2015.11 - now</div>
                                 <div class="circle"></div>
                                 <div class="data">
-                                    <div class="subject">Phd candidate @ Aalto University</div>
+                                    <div class="subject">Phd candidate @ <a href=http://cs.aalto.fi/en/>CSE, Aalto University</a></div>
                                     <div class="text row">                                        
                                         <div class="col-md-10">
-                                            Supervisor: Tapani Raiko
+                                            Supervisor:  <a href=https://users.ics.aalto.fi/praiko/>Tapani Raiko</a>
                                         </div>
                                     </div>
                                 </div>
@@ -169,7 +169,7 @@
                                 <div class="date">2009.08 - 2011.06</div>
                                 <div class="circle"></div>
                                 <div class="data">
-                                    <div class="subject">Master's student in Machine Learning @ <a href=https://users.ics.aalto.fi/praiko/>Indian Institute of technology Madras </a></div>
+                                    <div class="subject">Master's student in Machine Learning @ <a href=https://users.ics.aalto.fi/praiko/>Indian Institute of Technology Madras </a></div>
                                     <div class="text row">                                        
                                         <div class="col-md-10">
                                             Supervisor:<a href= http://www.cse.iitm.ac.in/chandra/Prof.> C. Chandrasekhar.</a>
