--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                     <div class="subject">Machine Learning Researcher @<a href= http://www.ericsson.com/research-blog/category/data-knowledge/> Ericsson Research </a></div>
 				    <div class="text row">                                        
                                         <div class="col-md-10">
-                                           Work summary: Application of Deep Learning, Multi-task learning, Distance Metric Learning to the application domains of Customer Relationship Management and Tele-communication networks.
+                                           Work summary: Application of Deep Learning, Multi-task learning, Distance Metric Learning etc. to the application domains of Customer Relationship Management and Tele-communication networks.
                                         </div>
                                     </div>
                                 </div>
