--- a/publications/index.html
+++ b/publications/index.html
@@ -13,7 +13,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="author" content="owwwlab.com">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">            
-        <link rel="shortcut icon" href="http://vikasverma1077.github.io/img/brain.jpg">
+        <link rel="shortcut icon" href="http://vikasverma1077.github.io/img/vikas.jpg">
 
         <!--CSS styles-->
         <link rel="stylesheet" href="http://vikasverma1077.github.io/css/bootstrap.css">
@@ -119,14 +119,14 @@
                                                 <div class="pubmain">
                                                     <!-- download & expand buttons -->
                                                     <div class="pubassets">
-                                                        <a href="http://arxiv.org/abs/1506.00990" class="tooltips" title="Download" target="_blank">
+                                                        <a href="http://arxiv.org/abs/1409.0749" class="tooltips" title="Download" target="_blank">
                                                             <i class="icon-cloud-download"></i>
                                                         </a>
                                                     </div>
 
                                                     <!-- paper info -->
-                                                    <h4 class="pubtitle">Unsupervised Learning of Neural Network Outputs</h4>
-                                                    <div class="pubauthor"><strong>Yao Lu</strong></div>
+                                                    <h4 class="pubtitle">Real-Time Internet Traffic Classification using Deep Learning</h4>
+                                                    <div class="pubauthor"><strong>Vikas Verma</strong></div>
                                                     <div class="pubcite">arXiv, 2015.</div>                                        
                                                 </div>
 
@@ -134,7 +134,30 @@
                                                 <div class="pubdetails">                                            
                                                     <p>
 <img src="http://vikasverma1077.github.io/img/zero_shot.jpg" align="left" width="200px" style="margin-right:30px">
-We explore a trained ConvNet by unsupervised learning. With several unsupervised learning algorithms, we proposed a new zero-shot learning method, which achieves state-of-the-art results on the ImageNet of over 20,000 classes.
+Over the last few years, deep learning based
+approaches have gained significant interest in various domains
+such as visual recognition, speech recognition and natural
+language processing. However, to the best of our knowledge
+these deep learning approaches have not been extensively
+studied for Internet traffic classification task. In this paper,
+we apply Stacked Denoising Auto-encoders (SDAE), which is a
+type of deep learning algorithm, to Real-Time Internet traffic
+classification. We use two operational network data traces
+for our experiments. Our results show that significant gain
+in classification accuracy can be achieved by applying deep
+learning algorithms. We also show that the representations
+learned at the hidden layers of SDAE can be used with other su-
+pervised classification algorithms to improve their performance.
+Further, we explore the usefulness of these representations
+in the problem settings with very limited amount of labeled
+data. Finally, we investigate the robustness of the SDAE based
+representations by evaluating their performance across data
+sources. We obtain encouraging results for all of the above
+mentioned experiments. We hope that this paper will inspire
+more research for applying deep learning approaches to a wide
+range of Internet traffic classification and Internet Modeling
+and Measurement tasks.
+
 </p>
 
 <div style="clear: both"></div>
