--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <p>I am a First year PhD student at Computer Science Department of  Aalto University, Finland.</p>
 			<p>My supervisor is <a href=https://users.ics.aalto.fi/praiko/>Tapani Raiko</a>.</p>                           
                         <p>My research interest primarily lies in designing efficient optimization algorithms for Deep Architectures. To this end, I am working on the ideas based on transforming the outputs of hidden neurons of the networks. Tranformation based approaches have been shown to be very effective previously. Example of these approaches include <a href=http://jmlr.csail.mit.edu/proceedings/papers/v22/raiko12/raiko12.pdf>Deep learning made easier by linear transformations in perceptrons</a>, <a href=http://arxiv.org/abs/1502.03167>Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift</a>, <a href=https://papers.nips.cc/paper/5953-natural-neural-networks.pdf>Natural neural networks. </a> </p>   
-   			<p>Application area wise, my research interest primarily lies in computer vision and natural language processing.</p>                      
+   			<p>Application area wise, my research interest primarily lies in Computer Vision and Natural Language Processing.</p>                      
                     </div>
                     <div class="col-md-4">
                         <div class="subtitle text-center">
@@ -158,7 +158,7 @@
                                     <div class="subject">Machine Learning Researcher @<a href= http://www.ericsson.com/research-blog/category/data-knowledge/> Ericsson Research </a></div>
 				    <div class="text row">                                        
                                         <div class="col-md-10">
-                                           Work summary: Application of Deep Learning, Multi-task learning, Distance Metric Learning etc. to the application domains of Customer Relationship Management and Tele-communication networks.
+                                           Work Summary: Application of Deep Learning, Multi-task learning, Distance Metric Learning etc. to the application domains of Customer Relationship Management and Tele-communication networks.
                                         </div>
                                     </div>
                                 </div>
@@ -180,7 +180,7 @@
                                             Supervisor:<a href= http://www.cse.iitm.ac.in/chandra/Prof.> C. Chandrasekhar.</a>
                                         </div>
 					<div class="col-md-10">
-                                            Work summary: Desigend a kernel for "set-of-feature-vectors" for Content based Image Retrieval. Also developed a Probabilistic Meta-Learning framework for faster image retrieval. 
+                                            Work Summary: Desigend a kernel for "set-of-feature-vectors" for Content based Image Retrieval. Also developed a Probabilistic Meta-Learning framework for faster image retrieval. 
                                         </div>
                                     </div>
                                 </div>
