--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="author" content="owwwlab.com">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">            
-        <link rel="shortcut icon" href="http://vikasverma1077.github.io/img/brain.jpg">
+        <link rel="shortcut icon" href="http://vikasverma1077.github.io/img/vikas.jpg">
 
         <!--CSS styles-->
         <link rel="stylesheet" href="http://vikasverma1077.github.io/css/bootstrap.css">
@@ -95,7 +95,7 @@
     <div class="social-icons">
         <ul>
             <li><a href="https://github.com/vikasverma1077"><i class="icon-github"></i></a></li>
-            
+            	
         </ul>
     </div>    
 </div>
