--- a/publications/index.html
+++ b/publications/index.html
@@ -77,9 +77,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="http://vikasverma1077.github.io/projects/">
+                    <a href="http://vikasverma1077.github.io/patents/">
                         <div class="icon icon-rocket"></div>
-                        <div class="text">Projects</div>
+                        <div class="text">Patents</div>
                     </a>
                 </li>
                 <li>
@@ -186,7 +186,7 @@ and Measurement tasks.
                                                     </div>
 
                                                     <!-- paper info -->
-                                                    <h4 class="pubtitle">Image Retrieval And Classification Using Local Feature Vectors</h4>
+                                                    <h4 class="pubtitle">Master's Thesis:Image Retrieval And Classification Using Local Feature Vectors</h4>
                                                     <div class="pubauthor"><strong>Vikas Verma</strong></div>
                                                     <div class="pubcite">arXiv, 2014.</div>                                        
                                                 </div>
