--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="http://vikasverma1077.github.io/projects/">
+                    <a href="http://vikasverma1077.github.io/patents/">
                         <div class="icon icon-rocket"></div>
-                        <div class="text">Projects</div>
+                        <div class="text">Patents</div>
                     </a>
                 </li>
                 <li>
