--- a/publications/index.html
+++ b/publications/index.html
@@ -196,7 +196,7 @@ and Measurement tasks.
                                                     <p>
     <img src="http://vikasverma1077.github.io/img/cbir.png" align="left" width="400px" style="margin-right:30px">
     Content Based Image Retrieval(CBIR) is one of the important subfield of Information
-Retrieval field. The goal of a CBIR algorithm is to retrieve semantically similar images in
+Retrieval. The goal of a CBIR algorithm is to retrieve semantically similar images in
 response to a query image submitted by the end user. CBIR is a challenging problem because of
 the phenomenon known as semantic gap. 
 
