--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <h3>Research Interests</h3>
                         </div>
                         <ul class="ul-boxed list-unstyled">
-                            <li>Optimization algorithms for Deep Architectures</li>
+                            <li>Optimization methods for Deep Architectures</li>
                             <li>Non-convex optimization</li>
 			    <li>Structured prediction</li>
                             
