--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="title">
                     <h2>Vikas Verma</h2>
                     <h3><a href=http://cs.aalto.fi/en/>Department of Computer Science, Aalto University</a></h3>
-                    <h3>vikasverma.iitm@gmail.com</h3>
+                    <h3><a href="mailto:vikasverma.iitm@gmail.com" target="_top">vikasverma.iitm@gmail.com</a></h3>
 		    <h3><a href=http://vikasverma1077.github.io/publications/cv_vikas_verma.pdf/>CV</a></h3>
                 </div>                            
             </div>
