--- a/publications/index.html
+++ b/publications/index.html
@@ -130,7 +130,7 @@
                                                     <!-- paper info -->
                                                     <h4 class="pubtitle">Real-Time Internet Traffic Classification using Deep Learning</h4>
                                                     <div class="pubauthor"><strong>Vikas Verma</strong></div>
-                                                    <div class="pubcite">Accepted in IEEE WowMoM 2015, Boston, MA, USA.</div>                                        
+                                                    <div class="pubcite"> <a href="http://csr.bu.edu/wowmom15/">Accepted in IEEE WowMoM 2015, Boston, MA, USA.</a></div>                                        
                                                 </div>
 
                                                 <!-- paper details -->
