--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
             <div class="section-container">                               
                 <div class="row">
                     <div class="col-md-8">
-                        <p>I am a first year PhD Candidate at <a href=http://cs.aalto.fi/en/> Computer Science Department of  Aalto University, Finland.</a></p>
-			<p>My supervisor is <a href=https://users.ics.aalto.fi/praiko/>Prof. Tapani Raiko</a>.</p>                           
-                        <p>My research interest primarily lies in designing efficient optimization algorithms for Deep Neural Networks. To this end, I am working on the ideas based on transforming the outputs of hidden units of the networks. Tranformation based approaches have been shown to be very effective previously. Example of these approaches include <a href=http://jmlr.csail.mit.edu/proceedings/papers/v22/raiko12/raiko12.pdf>Deep learning made easier by linear transformations in perceptrons</a>, <a href=http://arxiv.org/abs/1502.03167>Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift</a>, <a href=https://papers.nips.cc/paper/5953-natural-neural-networks.pdf>Natural neural networks. </a> </p>   
-   			<p>Application-area wise, I am mainly interested in Computer Vision and Natural Language Processing.</p>                      
+                        <p>I am a PhD Candidate at <a href=http://cs.aalto.fi/en/> Computer Science Department of  Aalto University, Finland.</a></p>
+			<p>My supervisor is <a href=https://users.ics.aalto.fi/praiko/>Prof. Juho Kannala</a>.</p>                           
+                        <p>My research interest primarily lies in designing efficient regularization techniques for Deep Neural Networks. </p>   
+   			<p>Application-area wise, I am mainly interested in Computer Vision and Health care.</p>                      
                     </div>
                     <div class="col-md-4">
                         <div class="subtitle text-center">
