--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                             <h3>Research Interests</h3>
                         </div>
                         <ul class="ul-boxed list-unstyled">
-                            <li>Optimization methods for Deep Neural Networks</li>
-                            <li>Non-convex optimization</li>
+                            <li>Efficient Regularization Techniques for Deep Neural Networks</li>
+                            <li>Learning in few labeled data regime</li>
 			   
                             
                         </ul>
@@ -142,13 +142,13 @@
                         </div>
                         <ul class="timeline">
                             <li class="open">
-                                <div class="date">2015.11 - now</div>
+                                <div class="date">2016.01 - now</div>
                                 <div class="circle"></div>
                                 <div class="data">
                                     <div class="subject">Phd candidate @ <a href=http://cs.aalto.fi/en/>CSE, Aalto University</a></div>
                                     <div class="text row">                                        
                                         <div class="col-md-10">
-                                            Supervisor:  <a href=https://users.ics.aalto.fi/praiko/>Tapani Raiko</a>
+                                            Supervisor:  <a href=https://users.aalto.fi/~kannalj1/>Juho Kannala</a>
                                         </div>
                                     </div>
                                 </div>
