--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
                         <p>I am a PhD Candidate at <a href=http://cs.aalto.fi/en/> Computer Science Department of  Aalto University, Finland.</a></p>
 			<p>My supervisor is <a href=https://users.ics.aalto.fi/praiko/>Prof. Juho Kannala</a>.</p>                           
                         <p>My research interest primarily lies in designing efficient regularization techniques for Deep Neural Networks. </p>   
-   			<p>Application-area wise, I am mainly interested in Computer Vision and Health care.</p>                      
+   			<p>Application-area wise, I am mainly interested in Computer Vision and Health care.</p>     
+	    		<p>Check my google scholar profile for my complete list of publications :<a href= https://scholar.google.com/citations?user=wo_M4uQAAAAJ&hl=en/></a></p>
                     </div>
                     <div class="col-md-4">
                         <div class="subtitle text-center">
