--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 			<p>My supervisor is <a href=https://users.ics.aalto.fi/praiko/>Prof. Juho Kannala</a>.</p>                           
                         <p>My research interest primarily lies in designing efficient regularization techniques for Deep Neural Networks. </p>   
    			<p>Application-area wise, I am mainly interested in Computer Vision and Health care.</p>     
-	    		<p>Check my google scholar profile for my complete list of publications :<a href= https://scholar.google.com/citations?user=wo_M4uQAAAAJ&hl=en/></a></p>
-                    </div>
+	    		<p>Check my  <a href= https://scholar.google.com/citations?user=wo_M4uQAAAAJ&hl=en/>google scholar profile </a> for my complete list of publications </p>
+                    </div> 
                     <div class="col-md-4">
                         <div class="subtitle text-center">
                             <h3>Research Interests</h3>
