--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			<p>My supervisor is <a href=https://users.ics.aalto.fi/praiko/>Prof. Juho Kannala</a>.</p>                           
                         <p>My research interest primarily lies in designing efficient regularization techniques for Deep Neural Networks. </p>   
    			<p>Application-area wise, I am mainly interested in Computer Vision and Health care.</p>     
-	    		<p>Check my  <a href= https://tinyurl.com/yy2ktvg/>google scholar profile </a> for my complete list of publications </p>
+	    		<p>Check my  <a href= https://tinyurl.com/yy2ktvg/>google scholar profile </a> for my complete list of publications. </p>
                     </div> 
                     <div class="col-md-4">
                         <div class="subtitle text-center">
@@ -123,7 +123,7 @@
                         </div>
                         <ul class="ul-boxed list-unstyled">
                             <li>Efficient Regularization Techniques for Deep Neural Networks</li>
-                            <li>Learning in few labeled data regime</li>
+                            <li>Learning in the few labeled data regime</li>
 			   
                             
                         </ul>
