--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                     <h2>Vikas Verma</h2>
                     <h3><a href=http://cs.aalto.fi/en/>Department of Computer Science, Aalto University</a></h3>
                     <h3><a href="mailto:vikasverma.iitm@gmail.com" target="_top">vikasverma.iitm@gmail.com</a></h3>
-		    <h3><div class="pubassets">
-                         <a href="http://vikasverma1077.github.io/publications/cv_vikas_verma.pdf" class="tooltips"  target="_blank">CV</a>
-                        </div></h3>
+		    #<h3><div class="pubassets">
+                    #     <a href="http://vikasverma1077.github.io/publications/cv_vikas_verma.pdf" class="tooltips"  target="_blank">CV</a>
+                    #    </div></h3>
                 </div>                            
             </div>
             <ul id="navigation">
@@ -142,6 +142,19 @@
                             <h3>Study/Working Experience</h3>
                         </div>
                         <ul class="timeline">
+				
+			   <li class="open">
+                                <div class="date">2017.03 - now</div>
+                                <div class="circle"></div>
+                                <div class="data">
+                                    <div class="subject">Phd Intern @ Montreal Institute of Learning Algorithms</div>
+                                    <div class="text row">                                        
+                                        <div class="col-md-10">
+                                            Supervisor:  Prof Yoshua Bengio
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
                             <li class="open">
                                 <div class="date">2016.01 - now</div>
                                 <div class="circle"></div>
