--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     <div class="subject">Phd Intern @ Montreal Institute of Learning Algorithms</div>
                                     <div class="text row">                                        
                                         <div class="col-md-10">
-                                            Supervisor:  Prof Yoshua Bengio
+                                            Supervisor:  Prof. Yoshua Bengio
                                         </div>
                                     </div>
                                 </div>
@@ -162,7 +162,7 @@
                                     <div class="subject">Phd candidate @ <a href=http://cs.aalto.fi/en/>CSE, Aalto University</a></div>
                                     <div class="text row">                                        
                                         <div class="col-md-10">
-                                            Supervisor:  <a href=https://users.aalto.fi/~kannalj1/>Juho Kannala</a>
+                                            Supervisor:  <a href=https://users.aalto.fi/~kannalj1/> Prof. Juho Kannala</a>
                                         </div>
                                     </div>
                                 </div>
