--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             <div class="section-container">                               
                 <div class="row">
                     <div class="col-md-8">
-                        <p>I am a PhD Candidate at <a href=http://cs.aalto.fi/en/> Computer Science Department of  Aalto University, Finland.</a></p>
-			<p>My supervisor is <a href=https://users.ics.aalto.fi/praiko/>Prof. Juho Kannala</a>.</p>                           
+                        <p>I am a PhD Candidate at <a href=http://cs.aalto.fi/en/> Computer Science Department of  Aalto University, Finland.</a> supervised
+			by <a href=https://users.ics.aalto.fi/praiko/>Prof. Juho Kannala</a>.</p>                           
                         <p>My research interest primarily lies in designing efficient regularization techniques for Deep Neural Networks. </p>   
    			<p>Application-area wise, I am mainly interested in Computer Vision and Health care.</p>     
 	    		<p>Check my  <a href= https://tinyurl.com/yy2ktvg/>google scholar profile </a> for my complete list of publications. </p>
