--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			by <a href=https://users.ics.aalto.fi/praiko/>Prof. Juho Kannala</a>.</p>                           
                         <p>My research interest primarily lies in designing efficient regularization techniques for Deep Neural Networks. </p>   
    			<p>Application-area wise, I am mainly interested in Computer Vision and Health care.</p>     
-	    		<p>Check my  <a href= https://tinyurl.com/yy2ktvg/>google scholar profile </a> for my complete list of publications. </p>
+	    		<p>Check my  <a href= https://tinyurl.com/yy2ktvgm/>google scholar profile </a> for my complete list of publications. </p>
                     </div> 
                     <div class="col-md-4">
                         <div class="subtitle text-center">
